--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,6 @@
   <title>AngularJS Starter App</title>
   <link rel="stylesheet" href="/css/main.css">
 
-
 </head>
 <body ng-app="MyApp">
   <div ng-include src="'partials/header.html'"></div>
@@ -20,8 +19,10 @@
   <script src="/js/lib/angular.js"></script>
   <script src="/js/lib/angular-route.js"></script>
   <script src="/js/lib/satellizer.js"></script>
+  <script src="/js/lib/rzslider.min.js"></script>
   <script src="/js/application.js"></script>
   <script src="/js/templates.js"></script>
+
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
