--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AngularJS Starter App</title>
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/vendor/stepper/md-steppers.min.css">
 
 </head>
 <body ng-app="MyApp">
@@ -20,6 +21,10 @@
   <script src="/js/lib/angular-route.js"></script>
   <script src="/js/lib/satellizer.js"></script>
   <script src="/js/lib/rzslider.min.js"></script>
+  <script src="/js/lib/angular-animate.min.js"></script>
+  <script src="/js/lib/angular-aria.min.js"></script>
+  <script src="/js/lib/angular-material.min.js"></script>
+  <script src="/js/lib/md-steppers.min.js"></script>
   <script src="/js/application.js"></script>
   <script src="/js/templates.js"></script>
 
